# scriptorium

./: Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/gold/: .gitkeep
docs/: architecture.md
scriptorium/: .gitignore  Makefile  config.example.yaml  pyproject.toml  requirements.txt
scriptorium/data/samples/: .gitkeep
scriptorium/results/: .gitkeep
scriptorium/scripts/: app.py  run_benchmark.py
scriptorium/src/models/: vlm_hf.py
scriptorium/src/pipeline/: correction.py  ocr.py  preprocess.py
scriptorium/tests/: test_preprocess.py
scripts/: app.py  eval_dataset.py  run_benchmark.py
src/eval/: metrics.py
src/models/: vlm.py  vlm_hf.py
src/pipeline/: correction.py  layout.py  ocr.py  preprocess.py
tests/: test_metrics.py  test_preprocess.py
