[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting-ocr-benchmark"
version = "0.1.0"
description = "Benchmark handwriting OCR: classic pipeline vs Qwen3.5-9B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-doctr[torch]>=0.8",
    "easyocr>=1.7",
    "Pillow>=10.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "openai>=1.30",
    "jiwer>=3.0",
    "sacrebleu>=2.4",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "black",
]
ui = ["gradio>=4.0"]
hf  = [
    "accelerate>=0.30",
    "qwen-vl-utils>=0.0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
